# advent-of-code

./: .gitignore  .scalafmt.conf  BUILD  Day01.scala  Day01Main.scala  Day01Test.scala  Day03.scala  Day03Main.scala  Location.scala  MODULE.bazel  Parser.scala  StringParser.scala  TextParser.scala  WORKSPACE  day01.go  day01py.py  day02py.py  day03.go  day03_main.go  day03_test.go  day03py.py  day03py_test.py  go.mod
parser/: BUILD  Parser.scala  StackTrace.scala  StringParser.scala
year2024/: BUILD  Day01Test.scala  Day02.scala  Day02Test.scala  day01.go  day01.input.test  day01.rs  day01_main.rs  day01_test.rs  day01py.py  day02.go  day03py_test.py
year2025/: BUILD  Day01.scala  Day01Main.scala  Day01Test.scala  Day02.scala  Day02Main.scala  Day02Test.scala  Day03.scala  Day03Main.scala  Day03Test.scala  Day04.scala  Day04Main.scala  Day04Test.scala  Day05.scala  Day05Main.scala  Day05Test.scala  Day06.scala  Day06Main.scala  Day06Test.scala  Day07.scala  Day07Main.scala  Day07Test.scala
