"""
Solutions to Advent of Code 2024
"""
bazel_dep(
    name = "rules_go",
    version = "0.50.1",
)

bazel_dep(
    name = "rules_rust",
    version = "0.54.1",
)

bazel_dep(
    name = "rules_kotlin",
    version = "2.0.0",
)

bazel_dep(
    name = "rules_python",
    version = "1.0.0",
)

bazel_dep(
    name = "rules_scala",
    version = "7.0.0",
)

local_path_override(
    module_name = "rules_scala",
    path = "/home/meisam/workspace/rules_scala",
)
register_toolchains("@rules_scala//protoc:all")

scala_config = use_extension(
    "@rules_scala//scala/extensions:config.bzl",
    "scala_config",
)

# STL version as of 2025-03-09
scala_config.settings(scala_version = "3.3.5")
scala_deps = use_extension(
    "@rules_scala//scala/extensions:deps.bzl",
    "scala_deps",
)

scala_deps.toolchains(
    junit = True,
    scalatest = True,
    specs2 = True,
)

# Make it possible to run bazel run @rules_go//go -- mod tidy -v
# Based on:
# - https://github.com/bazel-contrib/rules_go/blob/master/docs/go/core/bzlmod.md
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.24.1")

bazel_dep(name = "rules_java", version = "8.11.0")
bazel_dep(name = "rules_jvm_external", version = "6.7")

# Add maven_install to define the coordinates:
maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "org.scalacheck:scalacheck_3:1.18.1",
        "org.scalatestplus:scalacheck-1-18_3:3.2.19.0",
    ],
    fetch_sources = False,
    repositories = [
        "https://repo1.maven.org/maven2/",
    ],
)
use_repo(maven, "maven")  # This line is important to make the dependency available.
