"""
Solutions to Advent of Code 2024
"""
module(
    name = "advent-of-code",
    version = "0.1.0",
    compatibility_level = 0,  # MUST be incremented when a major incompatible change is made
    bazel_compatibility = [
        ">=8.0.0",
    ],
)
bazel_dep(
    name = "rules_cc",
    version = "0.2.14",
)
bazel_dep(
    name = "rules_go",
    version = "0.59.0",
)
bazel_dep(
    name = "rules_java",
    version = "9.0.3",
)
bazel_dep(
    name = "rules_jvm_external",
    version = "6.9",
)
bazel_dep(
    name = "rules_kotlin",
    version = "2.2.0",
)
bazel_dep(
    name = "rules_python",
    version = "1.7.0",
)
bazel_dep(
    name = "rules_rust",
    version = "0.57.0",
)
bazel_dep(
    name = "rules_scala",
    version = "7.1.5",
)

# Make it possible to run bazel run @rules_go//go -- mod tidy -v
# Based on:
# - https://github.com/bazel-contrib/rules_go/blob/master/docs/go/core/bzlmod.md
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.25.4")

# Java toolchains (required for Scala)
maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "org.scalacheck:scalacheck_3:1.18.1",
        "org.scalatestplus:scalacheck-1-18_3:3.2.19.0",
    ],
    fetch_sources = False,
    repositories = [
        "https://repo1.maven.org/maven2/",
    ],
)
use_repo(maven, "maven")  # This line is important to make the dependency available.

# Rust toolchains
rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2021",
    versions = ["1.82.0"],
)
use_repo(rust, "rust_toolchains")

register_toolchains("@rust_toolchains//:all")

crate = use_extension("@rules_rust//crate_universe:extension.bzl", "crate")
crate.spec(
    package = "proptest",
    version = "1.5.0",
)
crate.from_specs(
    name = "crates",
)
use_repo(crate, "crates")

# Scala toolchains
register_toolchains(
    "@rules_scala//protoc:all",
)
scala_config = use_extension(
    "@rules_scala//scala/extensions:config.bzl",
    "scala_config",
)
scala_config.settings(
    scala_version = "3.3.7",  # STL version as of 2025-11-30
)
scala_deps = use_extension(
    "@rules_scala//scala/extensions:deps.bzl",
    "scala_deps",
)
scala_deps.scala()
scala_deps.scala_proto(
    default_gen_opts = ["grpc", "scala3_sources"],
)
dev_deps = use_extension(
    "@rules_scala//scala/extensions:deps.bzl",
    "scala_deps",
    dev_dependency = True,
)
dev_deps.scalafmt(default_config = ".scalafmt.conf")
dev_deps.scalatest()
